# baton-agent-relay

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  LICENSE  QUICKSTART.md  README.md  package-lock.json  package.json  railway.json  tsconfig.json
.github/workflows/: ci.yml
clients/python/: README.md  pyproject.toml
clients/python/baton/: __init__.py  __main__.py  client.py
clients/python/baton_relay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
demo/: agent-a-resume.py  agent-a.py
demo/brand-docs/current/: assets.md  brand-guide.md  colors.md  components.md  typography.md  voice-tone.md
demo/brand-docs/deprecated/: brand-v1-2022.md  legacy-voice.md  old-assets.md
scripts/: bench.py
src/: docs.ts  server.ts  slugs.ts  store.ts  x402.ts
tests/: integration.test.ts
