[project]
name = "baton-relay"
version = "0.1.0"
description = "Python client for the Baton AI Messaging Relay"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Baton contributors" }]

[project.optional-dependencies]
ed25519 = ["cryptography>=42"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["baton*"]
