[project]
name = "baton-relay"
version = "0.1.0"
description = "Python client for the Baton AI Messaging Relay"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Baton contributors" }]

[project.optional-dependencies]
ed25519 = ["cryptography>=42"]

[project.scripts]
baton = "baton.__main__:main"

[project.urls]
Homepage = "https://github.com/realityinspector/baton-agent-relay"
Live = "https://baton-app-production-90c3.up.railway.app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["baton*"]
